# orch-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: RESUMEN-ES.md  SUMMARY-EN.md
orch/: cli.py  config.py  manager.py  state.py
test-project/: orch.yml
test-project/backend/: app.py  test_running.txt
test-project/ui/: package.json  server.js
tests/: test_config.py  test_state.py
