[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orch-cli"
version = "0.1.1"
description = "A local development process orchestrator and venv-aware runner"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
]

[project.scripts]
orch = "orch.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["orch"]
